# llmpool

./: .clinerules  .gitignore  Cargo.toml  README.md  llmpool.toml.example
crates/llmpool/: Cargo.toml
crates/llmpool-ctl/: Cargo.toml
crates/llmpool-ctl/src/: client.rs  main.rs
crates/llmpool-ctl/src/cmds/: account.rs  apikey.rs  consumer.rs  endpoint.rs  fund.rs  mod.rs  model.rs  session_event.rs  subscription.rs  upstream.rs  user.rs  wallet.rs
crates/llmpool/migrations/: 20260319000001_initial_schema.sql
crates/llmpool/src/: config.rs  crypto.rs  lib.rs  main.rs  server.rs  telemetry.rs
crates/llmpool/src/anthropic/: features.rs  mod.rs  provider.rs  session_tracer.rs
crates/llmpool/src/anthropic/proxy_views/: batches.rs  client.rs  files.rs  helpers.rs  mod.rs  models.rs
crates/llmpool/src/db/: account.rs  api.rs  balance.rs  batches.rs  consumer.rs  core.rs  files.rs  fund.rs  llm.rs  mod.rs  openai.rs  responses.rs  session_event.rs  subscription.rs  user.rs  wallet.rs
crates/llmpool/src/defer/: mod.rs  tasks.rs  worker.rs
crates/llmpool/src/defer/tasks/: anthropic_event.rs  balance_change.rs  mod.rs  openai_event.rs  upstream_health.rs
crates/llmpool/src/helpers/: features.rs
crates/llmpool/src/middlewares/: admin_auth.rs  api_auth.rs  mod.rs  rate_limit.rs
crates/llmpool/src/models/: account.rs  api.rs  balance.rs  consumer.rs  fund.rs  llm.rs  mod.rs  openai.rs  session_event.rs  subscription.rs  user.rs  wallet.rs
crates/llmpool/src/openai/: features.rs  provider.rs  session_tracer.rs
crates/llmpool/src/openai/proxy_views/: files.rs  helpers.rs
crates/llmpool/src/provider/: mod.rs  types.rs
crates/llmpool/src/redis_utils/: cache.rs  counters.rs  mod.rs
crates/llmpool/src/redis_utils/caches/: account.rs  api_key.rs  apikey.rs  fund.rs  mod.rs  wallet.rs
crates/llmpool/src/views/: admin_rest.rs  admin_rest_api.rs  admin_rpc.rs  mod.rs  openai_proxy.rs  passthrough.rs
crates/llmpool/src/views/anthropic_proxy/: batches.rs  client.rs  files.rs  helpers.rs  messages.rs  mod.rs  models.rs
crates/llmpool/src/views/openai_proxy/: batches.rs  chat_completions.rs  embeddings.rs  files.rs  helpers.rs  images.rs  mod.rs  models.rs  responses.rs  speechs.rs
crates/llmpool/tests/: db_tests.rs
docker/: Dockerfile  docker-compose.yml
docs/: VIBETEXT.md  anthropic-spec.json  api-schema.json  api-schema.yaml  api.md  controls.md  security-review-20260403.md  vibecoding.md
